tests/spec/pass/comparisons.aja
a = 10
b = 3
print(a > b)
print(a >= 10)
print(a == 10)
print(a != b)
print(a < b)
print(3 == 3.0)
