tests/spec/fail/ordering_non_numeric.aja
if "a" < "b":
    print("x")
